// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ErrorPage correctly 1`] = `
<div
  className="ErrorPage"
>
  <h1 />
</div>
`;

exports[`should render ErrorPage wit message correctly 1`] = `
<div
  className="ErrorPage"
>
  <h1>
    An error occurred
  </h1>
</div>
`;
